# PAY_APP_SETUP

./: .dockerignore  .gitignore  Dockerfile  README.md  TESTING_WALKTHROUGH.md  bootstap.md  bootstrap.md  pay_app_setup.py  pyproject.toml
skills/: SKILL.md  question-bank.md
