[project]
name = "pay-app-setup"
version = "1.0.0"
description = "Enriches SAP SuccessFactors import templates with metadata from an OData XML dictionary, preparing them for use by PAY-APP."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
]

[project.scripts]
pay-app-setup = "pay_app_setup:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
